--- a/APIDatVe/HeThongQuanLyDatVe/Views/Login/ResetPasswork.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Login/ResetPasswork.cshtml
@@ -132,6 +132,7 @@
                     url: urlCheckToken,
                     method: 'POST',
                     data: {
+                        emailresetpasswork: '@ViewBag.email',
                         _token: '@ViewBag.token'
                     }
                 }).then(function success(response) {
