--- a/APIDatVe/HeThongQuanLyDatVe/Views/Login/DangNhap.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Login/DangNhap.cshtml
@@ -160,6 +160,8 @@
                         setCookie('token', data.token, 1)
                         setCookie('danhsachmanhinh', data.danhsachmanhinh, 1)
                         setCookie('setingstyle', data.setingstyle, 1)
+                        setCookie('avatar', data.avatar, 1)
+                        setCookie('hoten', data.hoten, 1)
                         location.href = '/';
                     }, function error(response) {
                         alert(response.data.Message);
