--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDatXe/DanhSachDatXe.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDatXe/DanhSachDatXe.cshtml
@@ -35,6 +35,14 @@
                             </div>
                         </div>
                         <div class="col-md-3">
+                            <div class="form-group">
+                                <label>Từ khóa</label>
+                                <div>
+                                    <input type="text" ng-model="filter._tukhoa" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
                             <button class="btn btn-primary btn-sm" style="margin-top:26px" ng-click="getDanhSachVeXe()">Tìm kiếm</button>
                         </div>
                     </div>
