--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyNhanVien/DanhSachNhanVien.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyNhanVien/DanhSachNhanVien.cshtml
@@ -211,7 +211,7 @@
                                 </div>
                                 <div class="col-md-12 margin-md-bottom">
                                     <div class="form-group">
-                                        <label class="control-label no-padding-right">Tên tài khoản <span class="require">(*)</span> </label>
+                                        <label class="control-label no-padding-right">Tên tài khoản (Email) <span class="require">(*)</span> </label>
                                         <div>
                                             <input type="text" ng-disabled="!isAdd" ng-model="detail.tentaikhoan" class="col-xs-12" />
                                         </div>
@@ -244,7 +244,7 @@
                             <div class="row">
                                 <div class="col-md-4 margin-md-bottom">
                                     <div class="form-group">
-                                        <label class="control-label no-padding-right">Giấy phép lái xe </label>
+                                        <label class="control-label no-padding-right">Giấy phép lái xe <span class="require">(*)</span> </label>
                                         <div>
                                             <input type="text" ng-model="detail.giaypheplaixe" class="col-xs-12" />
                                         </div>
